--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "2.15.4",
     "svg-dotted-map": "^2.0.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
